<resources>
    <string name="app_name">NewsTestApp</string>

    <string-array name="tabTitles">
        <item>Bitcoin</item>
        <item>Corona</item>
        <item>Bangalore</item>
        <item>Lockdown</item>
        <item>Technology</item>
    </string-array>
</resources>