...
            android:textColor="@android:color/white"
            android:visibility="@{shouldShowHeadlines?View.VISIBLE:View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:setMarquee="@{shouldShowHeadlines}" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/headLines"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorHeight="1dp"
...
